<resources>
    <string name="app_name">MacroProjectKelompok11</string>
    <string name="aqi">AQI</string>
    <string name="pm25">PM2.5</string>
    <string name="desc_aqi"><b>AQI (Air Quality Index)</b> adalah sebuah indeks yang digunakan untuk mengukur seberapa baik atau buruk kualitas udara di suatu wilayah atau lokasi tertentu. Ini membantu kita memahami seberapa sehat atau tidak sehat udara yang kita hirup setiap hari.</string>
    <string name="desc_pm25"><b>Particulate Matter (PM2.5)</b> adalah partikel udara yang berukuran lebih kecil dari atau sama dengan 2.5 µm (mikrometer). \n Environmental Protection Agency (EPA) Amerika Serikat menetapkan standar PM2.5 dengan kategori sebagai berikut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baik">Baik</string>
    <string name="sedang">Sedang</string>
    <string name="tidak_sehat_bagi_kel_sensitif">Tidak sehat bagi kelompok sensitif</string>
    <string name="tidak_Sehat">Tidak sehat</string>
    <string name="sangat_tidak_sehat">Sangat tidak sehat</string>
    <string name="berbahaya">Berbahaya</string>
    <string name="indAQI_1">0-50</string>
    <string name="indAQI_2">51-100</string>
    <string name="indAQI_3">101-150</string>
    <string name="indAQI_4">151-200</string>
    <string name="indAQI_5">201-300</string>
    <string name="indAQI_6">>301</string>
    <string name="indPM_1">0-12</string>
    <string name="indPM_2">12.1-35.4</string>
    <string name="indPM_3">35.5-55.4</string>
    <string name="indPM_4">55.5-150.4</string>
    <string name="indPM_5">150.5-250.4</string>
    <string name="indPM_6">>250.4</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_menggunakan_akun_anda">Masuk menggunakan akun anda</string>
    <string name="daftar">Daftar</string>
    <string name="lokasi">Lokasi</string>
    <string name="beranda">Beranda</string>
    <string name="inbox_message_tidaksehat">Perhatian! Kualitas udara di Condet saat ini <b>tidak sehat</b>. Jaga kesehatan Anda dan hindari aktivitas di luar ruangan jika memungkinkan.</string>
    <string name="inbox_message_sgttidaksehat">Perhatian! Kualitas udara di Condet saat ini <b>sangat tidak sehat</b>. Jaga kesehatan Anda dan hindari aktivitas di luar ruangan jika memungkinkan.</string>
    <string name="inbox_message_tgl1">21 Sep, 8:09</string>
    <string name="inbox_message_tgl2">18 Sep, 22:15</string>
    <string name="inbox_message_tgl3">2 Sep, 10:00</string>
    <string name="inbox_message_tgl4">25 Agu, 13:09</string>
    <string name="inbox_message_tgl5">24 Agu, 18:15</string>
    <string name="inbox_message_tgl6">22 Agu, 20:25</string>
    <string name="peta">Peta</string>
    <string name="artikel">Artikel</string>
    <string name="alarm">Alarm</string>
    <string name="title_activity_polusi_maps">PolusiMaps</string>
    <string name="berdirinya_pabrik_pabrik_besar_banyaknya_kendaraan_bermotor_asap_rokok_membuat_udara_di_kota_besar_semakin_tercemar_kondisi_tersebut_tentu_berbeda_dengan_di_pedesaan">Berdirinya pabrik-pabrik besar, banyaknya kendaraan bermotor, asap rokok, membuat udara di kota besar semakin tercemar. Kondisi tersebut tentu berbeda dengan di pedesaan.</string>
    <string name="todo">todo</string>
    <string name="penyebab_pencemaran_udara_dan_5_cara_mengatasinya">Penyebab pencemaran udara dan 5 cara mengatasinya</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="polusi_adalah_kondisi_yang_timbul_ketika_senyawa_kimia_energi_atau_polutan_masuk_ke_lingkungan_yang_merusak_ekologi_kondisi_lingkungan_dan_menyebabkan_bahaya_bagi_makhluk">polusi adalah kondisi yang timbul ketika senyawa kimia energi atau polutan masuk ke lingkungan yang merusak ekologi kondisi lingkungan dan menyebabkan bahaya bagi makhluk</string>
    <string name="pengertian_jenis_dan_dampak_polusi">Pengertian jenis dan dampak polusi</string>
    <string name="wawasan_informasi">Wawasan informasi</string>
    <string name="peta_polusi">Peta Polusi</string>
    <string name="btnhijau">btnHijau</string>
    <string name="zonahijau">zonahijau</string>
    <string name="zonamerah">Zona Merah</string>
    <string name="peta_polusi_title">Peta Polusi</string>
    <string name="parung_panjang">Parung Panjang</string>
    <string name="condet">Condet</string>
    <string name="alarm_peringatan">Alarm Peringatan</string>
</resources>