<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F9F9"
    tools:context=".Fragment_Informasi_PM25">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="90dp">

        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/desc_pm25"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="22dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_margin="2dp"
                android:background="@color/ind_baik">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indPM_1"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baik"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/ind_sedang">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indPM_2"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sedang"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/ind_tidaksehat_golsensitif">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/indPM_3"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak_sehat_bagi_kel_sensitif"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/ind_tidaksehat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indPM_4"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak_Sehat"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/ind_sgttidaksehat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indPM_5"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sangat_tidak_sehat"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/ind_berbahaya">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indPM_6"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/berbahaya"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>


    </LinearLayout>

</FrameLayout>