<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ind_tidaksehat"
    tools:context=".DetailDataLokasiActivity">

    <ImageView
        android:id="@+id/backgroundimageback"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_lingkaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundimageshare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="256dp"
        android:background="@drawable/background_lingkaran"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundimageback"
        app:layout_constraintStart_toEndOf="@+id/backgroundimageback"
        app:layout_constraintTop_toTopOf="@+id/backgroundimageback" />

    <ImageView
        android:id="@+id/imageshare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="69dp"
        android:src="@drawable/icon_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundimagealert"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_lingkaran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagealert"
        android:layout_width="26dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:src="@drawable/icon_alert"
        app:layout_constraintBottom_toBottomOf="@+id/imageshare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/backgroundinfolokasiactivity"
        android:layout_width="match_parent"
        android:layout_height="1280dp"
        android:backgroundTint="#F4F9F9"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_screen_detail_data_lokasi"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_lokasi"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toTopOf="@+id/backgroundinfolokasiactivity"
        app:tint="@color/ind_tidaksehat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Condet"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/emoji_tidaksehat"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_Sehat"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/aqi"
        android:textColor="#B3000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/pm25"
        android:textColor="#B3000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_lingkaran"
        android:backgroundTint="@color/biru_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_lingkaran"
        android:backgroundTint="@color/biru_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="15:35, 29 Sep 2023"
        android:textColor="#99000000"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#33000000"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/view3"
        android:layout_width="7dp"
        android:layout_height="80dp"
        android:layout_marginStart="-250dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_hal_informasi_aqi_dan_pm25"
        android:backgroundTint="@color/ind_tidaksehat"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="PM10"
        android:textColor="#99000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="72"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="µg/m3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/view2"
        android:layout_width="7dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_hal_informasi_aqi_dan_pm25"
        android:backgroundTint="@color/ind_baik"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="SO2"
        android:textColor="#99000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="20"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="µg/m3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/view4"
        android:layout_width="7dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_hal_informasi_aqi_dan_pm25"
        android:backgroundTint="@color/ind_baik"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="NO2"
        android:textColor="#99000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="22"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="µg/m3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/view5"
        android:layout_width="7dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_hal_informasi_aqi_dan_pm25"
        android:backgroundTint="@color/ind_tidaksehat_golsensitif"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="CO"
        android:textColor="#99000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="10"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="µg/m3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <View
        android:id="@+id/view6"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#33000000"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <include
        layout="@layout/detail_activity_detail_data_lokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintStart_toStartOf="@+id/backgroundinfolokasiactivity"
        app:layout_constraintTop_toBottomOf="@+id/view6" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>